--- a/app/views/challenges/quickquiz.html.erb
+++ b/app/views/challenges/quickquiz.html.erb
@@ -27,6 +27,7 @@
 </div>
 <div class="clear"></div>
 
+<script type="text/javascript" src="/assets/quickquiz/jquery-ui-1.8.17.custom/js/jquery-ui-1.8.17.custom.min.js"></script>
 <script type="text/javascript" src="/assets/quickquiz/knockout-2.0.0.js"></script>
 <script type="text/javascript" src="/assets/quickquiz/CodeMirror-2.2/lib/codemirror.js"></script>
 <script type="text/javascript" src="/assets/quickquiz/CodeMirror-2.2/mode/xml/xml.js"></script>
