--- a/app/views/challenges/quickquiz.html.erb
+++ b/app/views/challenges/quickquiz.html.erb
@@ -44,7 +44,7 @@
 	    lineNumbers: true
 	});
 	
-	function fnGetUrl(url) {
+	function fnGetUrl() {
 		var domain = document.URL.match(/:\/\/(.[^/]+)/)[1];
 		return 'http://' + domain;
 	}
