--- a/app/views/challenges/_quickquiz-sidebar.html.erb
+++ b/app/views/challenges/_quickquiz-sidebar.html.erb
@@ -28,7 +28,8 @@
 		<% end %>                            
 		</ul>
 		</div>
-	<% end %><br/>
+	<% end %>
+	<br/>
 		
 	<%= render "share" %>
 </ul>
