added pagination to registrants page

--- a/app/views/challenges/registrants.html.erb
+++ b/app/views/challenges/registrants.html.erb
@@ -37,13 +37,10 @@
 						<% end %>                     
                         
 	                    <div class="cl"></div>
-	                    <!-- Paging -->
-	                    <!--
-	                    <div class="paging">
-	                        <p class="ar">
-							<span><span class="selected">1</span>&nbsp;<a href="javascript:__doPostBack(&#39;ctl00$Body$DataPagerMembers$ctl00$ctl01&#39;,&#39;&#39;)">2</a>&nbsp;</span></p>
-	                    </div>-->
-	                    <!-- END Paging -->
+		                <% if !@registrants.nil? %>
+							<div style="margin-top:25px"></div>
+			            	<p class="fr"><%= will_paginate @registrants %></p>
+						<% end %>
 	                </div>
 					
 				<% end %>
