--- a/app/views/challenges/submission_view_only.html.erb
+++ b/app/views/challenges/submission_view_only.html.erb
@@ -3,7 +3,8 @@
         <div class="challenge-content-wrapper">
             <!-- Widecolumn -->
             <div class="widecolumn fl">
-				<span style="font-size:Small;font-weight:bold;"></span>
+            	<span></span>
+				<p><%= link_to "Back to Challenge Details", challenge_path %></p>
                 <div class="challenge-information">
                     <h3>Your Challenge Submission</h3>
 
