--- a/app/views/challenges/_quickquiz-sidebar.html.erb
+++ b/app/views/challenges/_quickquiz-sidebar.html.erb
@@ -40,7 +40,8 @@
 	<% end %>
 	</ul>
 	</div>
-	<br/>
+	<span><%= link_to "View all leaderboards", leaderboard_quickquiz_path %></span>
+	<div style="margin-bottom:30px"></div>	
 		
 	<%= render "share" %>
 </ul>
