questions by type

--- a/app/views/challenges/show_quickquiz.html.erb
+++ b/app/views/challenges/show_quickquiz.html.erb
@@ -55,6 +55,7 @@
 								<a class="button fl" href="<%= quickquiz_url %>?type=JavaScript"><span>JavaScript</span></a> 
 								<a class="button fl" href="<%= quickquiz_url %>?type=Ruby"><span>Ruby</span></a> 
 								<a class="button fl" href="<%= quickquiz_url %>?type=Java"><span>Java</span></a>
+								<a class="button fl" href="<%= quickquiz_url %>"><span>Suprise Me!</span></a>
 							<% end %>                    
 		                    </div>
 						<% else %>
