--- a/app/views/challenges/show_quickquiz.html.erb
+++ b/app/views/challenges/show_quickquiz.html.erb
@@ -48,9 +48,7 @@
 		                    <div>
 							<% if @participation_status[:status].eql?('Not Registered') %>
 		                        <a class="button fl" href="<%= register_url(@challenge_detail["Challenge_Id__c"]) %>"><span>Register</span></a>   
-							<% elsif @participation_status[:status].eql?('Watching') %>
-		                        <a class="button fl" href="<%= register_url(@challenge_detail["Challenge_Id__c"]) %>"><span>Register</span></a>
-							<% elsif @participation_status[:status].eql?('Registered') || @participation_status[:status].eql?('Submitted') %>
+							<% elsif (@participation_status[:status].eql?('Registered') || @participation_status[:status].eql?('Submitted')) && @member_status.size == 0 %>
 		                        <p>To start, simply choose the types of questions you would like to answer:</p>
 								<a class="button fl" href="<%= quickquiz_url %>?type=JavaScript"><span>JavaScript</span></a> 
 								<a class="button fl" href="<%= quickquiz_url %>?type=Ruby"><span>Ruby</span></a> 
