refactored quick quizes to a controller

--- a/app/views/challenges/_quickquiz-sidebar.html.erb
+++ b/app/views/challenges/_quickquiz-sidebar.html.erb
@@ -40,7 +40,7 @@
 	<% end %>
 	</ul>
 	</div>
-	<span><%= link_to "View all leaderboards", leaderboard_quickquiz_path %></span>
+	<span><%= link_to "View all leaderboards", quizleaderboard_path %></span>
 	<div style="margin-bottom:30px"></div>	
 		
 	<%= render "share" %>
