--- a/app/views/accounts/scorecard.html.erb
+++ b/app/views/accounts/scorecard.html.erb
@@ -296,7 +296,7 @@
 var INPUT_JSON = '{  " {\'Success\':\'True\',\'Message\':\'Query Ran Successfully\',\'id\': \'a0OU00000000KvhMAE\',\'name\': \'QSS-000590\',\'scored__c\': \'false\'}":  <%= @json %>}';
 </script>
 
-<div class="page-heading"><h2 class="melbourne">Scorecard</h2></div>
+<div class="page-heading"><h2 class="melbourne">Scorecard for <%= params[:member]%></h2></div>
 <div style="margin:25px">
 	
 <h3>Submitted Assets</h3>	
