removed all debug statements.. fixed

--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -26,7 +26,7 @@
             <input type="button" class="reset" value="Reset">
 		</div>
 	</div>
-	<button data-bind="click: submit" id="submitButton">Submit Answer</button>
+	<button data-bind="click: submit">Submit Answer</button>
 </div>
 <div class="clear"></div>
 
