--- a/app/views/quizes/results.html.erb
+++ b/app/views/quizes/results.html.erb
@@ -31,7 +31,7 @@ $(function() {
 <div class="challenge-content-wrapper ">
 
 <div id="channel">/q/*</div>
- <div id="username">jeffdonthemic</div>
+ <div id="username"><%= current_user.username %></div>
  <h2>Latest Answers from users</h2>
  <div id="answers">
    <div class="answer header">
