changed display of results page

--- a/app/views/challenges/_challenge-sidebar.html.erb
+++ b/app/views/challenges/_challenge-sidebar.html.erb
@@ -65,5 +65,5 @@
         <li><strong>Other:</strong> Upload a text document<br />with details on how to retrieve<br />your submission.</li>
 		</ul>
 	</li>
-	<%= render "share" %>
+	<%= render "shared/share" %>
 </ul>
