--- a/app/views/challenges/show_quickquiz.html.erb
+++ b/app/views/challenges/show_quickquiz.html.erb
@@ -158,7 +158,7 @@
                 
 				<!-- Challenge Sidebar -->
 				<div class="challenge-sidebar">
-				<%= render "quickquiz-sidebar" %>
+				<%= render "shared/quickquiz-sidebar" %>
 				</div>
 				<!-- END Challenge Sidebar -->
 
